courses/430_programming-languages/assignment-8/tests/error/error33.nex
yesle (verna) {raspetchatat 3;} yesho
